infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopfds
  labels:
    name: shopfds
    environment: production
